# guc-assistant

./: .env.example  README.md  cdk.json  package-lock.json  package.json
lambda/guc-assistant/: Dockerfile  guc_assistant.py  pyproject.toml
lib/: guc-assistant-stack.ts
test/: guc-assistant.test.ts
